fix: add outline to dark mode algo-buttons for consistency

--- a/src/app/simulation/grid-settings/maze-settings/maze-settings.component.scss
+++ b/src/app/simulation/grid-settings/maze-settings/maze-settings.component.scss
@@ -6,6 +6,11 @@
     font-size: 0.8rem;
 }
 
+body.theme-dark :host .algo-button {
+    font-size: 0.8rem;
+    outline: 1px solid var(--white-dark-87);
+}
+
 body.theme-dark :host .is-primary {
     color: var(--bulma-dark) !important;
     background-color: var(--bulma-primary) !important;
@@ -24,8 +29,3 @@ pre > code {
     margin-top: -1em;
     display: block;
 }
-
-
-
-
-
